# projector_control

./: README.md  ascii.py  config.json  configuration.yml  hex.py  main.py  main2.py  projector_control.py  pyproject.toml  read_projector.py  test.py
ha_yml/: automations.yml  dashboard.yml
src/: ascii.py
