[tool.poetry]
name = "projector-control"
version = "0.1.0"
description = ""
authors = ["farahorfaly <farah.orfaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
paho-mqtt = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
